arr/sonarr/sonarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: arr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.flexflix.top`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: local-network
          namespace: traefik
        - name: authentik
          namespace: authentik
